sinchronize remoteCall meton in Proxys
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7616 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
@@ -165,7 +165,11 @@
 			{
 				queue.removeEventListener( QueueEvent.QUEUE_COMPLETE, queueOnLoadCompleteHandler );
 				queue.removeEventListener( QueueEvent.UNKNOWN_ERROR, queueERRORHandler );
-				errorWriter.text = event.message;	
+				
+				if ( event.message == "execute_query_xml" )
+					errorWriter.text = "This server does not support this feature!!!";
+				else
+					errorWriter.text = event.message;	
 				queue.reset();
 				dataGridProvider = null;
 				
