--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
@@ -2,7 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 creationComplete="creationCompleteHandler(event)">
+		 creationComplete="creationCompleteHandler(event)" xmlns:components="net.vdombox.components.*">
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
@@ -17,6 +17,9 @@
 			private var _dataBases : XMLList;
 			
 			private var lastHighlightedItem : XML;
+			
+			private var typeBase : TypeVO;
+			private var typeTable : TypeVO;
 			
 			public function get dataBases() : XMLList
 			{
@@ -246,9 +249,17 @@
 					newSubItem.addEventListener( Event.SELECT, newSubItemSelectHandler, false, 0, true );
 						
 					if ( item.container != 3 )
+					{
 						newMenu.addItem( newSubItem );
+						if ( !typeTable )
+							typeTable = item;
+					}
 					else
+					{
 						newMenu.addItemAt( newSubItem, 0 );
+						if ( !typeBase )
+							typeBase = item;
+					}
 				}
 				newItem.submenu = newMenu;
 				
@@ -257,10 +268,24 @@
 			
 			private function newSubItemSelectHandler( event : Event ) : void
 			{
+				genericNewPageOrObject( event.target.data );
+			}
+			
+			private function genericNewPageOrObject( object : Object ) : void
+			{
 				var newEvent : DataTablesEvents = new DataTablesEvents( DataTablesEvents.SELECT_CONTEXT_ITEM_NEW );
-				newEvent.content = event.target.data;
+				newEvent.content = object;
 				dispatchEvent( newEvent );
-				
+			}
+			
+			protected function addBase_clickHandler(event:MouseEvent):void
+			{
+				genericNewPageOrObject( typeBase );
+			}
+			
+			protected function addTable_clickHandler(event:MouseEvent):void
+			{
+				genericNewPageOrObject( typeTable );
 			}
 			
 		]]>
@@ -280,9 +305,11 @@
 				 dataProvider="{ _dataBases }" labelField="@name" contentBackgroundAlpha="0"
 				 itemRenderer="net.vdombox.components.ObjectsTreePanelItemRenderer"/>
 		
-		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="center" visible="false" includeInLayout="false">
+		<s:HGroup width="100%" paddingTop="5" paddingBottom="5" verticalAlign="middle" horizontalAlign="center" gap="15">
 			
-				<s:Button id="addBase" label="Add New" />
+				<s:Button id="addBase" label="Add Base" click="addBase_clickHandler(event)"/>
+			
+				<s:Button id="addTable" label="Add Table" click="addTable_clickHandler(event)" />
 	
 		</s:HGroup>
 	</s:VGroup>
