--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/CreateNewObjectWindowSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/CreateNewObjectWindowSkin.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx">
+		xmlns:mx="library://ns.adobe.com/flex/mx"
+		creationComplete="sparkskin1_creationCompleteHandler(event)">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.dataBase.view.components.windows.CreateNewObjectWindow")]
@@ -14,21 +15,18 @@
 			
 			import spark.events.IndexChangeEvent;
 			
-			protected function baseName_creationCompleteHandler(event:FlexEvent):void
+			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
 			{
-				// TODO Auto-generated method stub
 				if ( baseName.dataProvider.length > 0 )
 					baseName.selectedIndex = 0;
-			}
-			
-			protected function chooseBaseGroup_creationCompleteHandler(event:FlexEvent):void
-			{
-				// TODO Auto-generated method stub
+				
 				if ( hostComponent.typeVO.container == 3 )
 				{
 					chooseBaseGroup.visible = false;
 					chooseBaseGroup.includeInLayout = false;
 				}
+				
+				objectName.setFocus();
 			}
 			
 		]]>
@@ -60,7 +58,7 @@
 			
 		<mx:Spacer height="5" />
 			
-		<s:HGroup id="chooseBaseGroup" width="100%" height="20" verticalAlign="middle" creationComplete="chooseBaseGroup_creationCompleteHandler(event)">
+		<s:HGroup id="chooseBaseGroup" width="100%" height="20" verticalAlign="middle">
 				
 			<s:Label text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Base' ) }" />
 				
@@ -68,7 +66,7 @@
 				
 			<s:DropDownList id="baseName" width="300"
 							dataProvider="{hostComponent.dataBases}" skinClass="spark.skins.spark.DropDownListSkin"
-							labelField="name" creationComplete="baseName_creationCompleteHandler(event)" />
+							labelField="name" />
 			
 		</s:HGroup>
 			
