--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -3,7 +3,7 @@
 	xmlns="net.vdombox.powerpack.dialog.*"
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	width="500" height="300"
-	title="AIR"
+	title="Build installer"
 	creationComplete="onShow()"
 	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" 
 	xmlns:customize="net.vdombox.powerpack.customize.*"
@@ -49,22 +49,48 @@
 				  </icon>
 				  </application>;
 			
+			private static const DEFAULT_OUTPUT_FOLDER		: String = File.documentsDirectory.nativePath;
+			private static const DEFAULT_OUTPUT_FILE_NAME	: String = "appInstaller";
+			private static const DEFAULT_APP_PATH			: String = "";
+			
 			private var shObject : SharedObject = SharedObject.getLocal( "air_properties" );
 			private  function onShow():void
 			{
-				installerFolder.text = outputFolderRemembered ? shObject.data["outputInstallerFolder"] : File.documentsDirectory.nativePath;
+				installerFolder.text = sharedOutputFolder || DEFAULT_OUTPUT_FOLDER;
 				
-				installerFileName.text = outputFileNameRemembered ? shObject.data["outputInstallerFileName"] : "appInstaller";
+				installerFileName.text = sharedOutputFileName || DEFAULT_OUTPUT_FILE_NAME;
+				
+				installerApplication.text = sharedApp || DEFAULT_APP_PATH;
 			}
 			
-			private function get outputFolderRemembered () : Boolean
+			private function get sharedOutputFolder () : String
 			{
-				return shObject.data.hasOwnProperty("outputInstallerFolder") && shObject.data["outputInstallerFolder"];
+				return shObject.data.hasOwnProperty("outputInstallerFolder") ? shObject.data["outputInstallerFolder"] : "";
 			}
 			
-			private function get outputFileNameRemembered () : Boolean
+			private function get sharedOutputFileName () : String
 			{
-				return shObject.data.hasOwnProperty("outputInstallerFileName") && shObject.data["outputInstallerFileName"];
+				return shObject.data.hasOwnProperty("outputInstallerFileName") ? shObject.data["outputInstallerFileName"] : "";
+			}
+			
+			private function get sharedApp () : String
+			{
+				return shObject.data.hasOwnProperty("installerApplication") ? shObject.data["installerApplication"] : "";
+			}
+			
+			private function get outputFolderPath () : String
+			{
+				return StringUtil.trim(installerFolder.text) || DEFAULT_OUTPUT_FOLDER;
+			}
+			
+			private function get outputFileName () : String
+			{
+				return StringUtil.trim(installerFileName.text) || DEFAULT_OUTPUT_FILE_NAME;
+			}
+			
+			private function get appPath () : String
+			{
+				return StringUtil.trim(installerApplication.text) || DEFAULT_APP_PATH;
 			}
 			
 			static public function show( templateXmlStructure : XML, closeHandler : Function = null ) : AirBuildProperties
@@ -98,8 +124,9 @@
 							_dialog.closeDetail = ModalDialog.OK;
 							_dialog.close();
 							
-							shObject.data["outputInstallerFolder"] = installerFolder.text;
-							shObject.data["outputInstallerFileName"] = installerFileName.text;
+							shObject.data["outputInstallerFolder"] = outputFolderPath;
+							shObject.data["outputInstallerFileName"] = outputFileName;
+							shObject.data["installerApplication"] = appPath;
 							
 							shObject.flush();
 						
@@ -122,7 +149,7 @@
 			
 			protected function btnOutputFolderClickHandler(event:MouseEvent):void
 			{
-				var file : File = new File(StringUtil.trim(installerFolder.text));
+				var file : File = new File(outputFolderPath);
 				
 				file.addEventListener(Event.SELECT, folderSelectHandler);
 				
@@ -135,6 +162,68 @@
 					
 					installerFolder.text = file.nativePath; 
 				}
+			}
+			
+			protected function btnBrowseApplicationClickHandler(event:MouseEvent):void
+			{
+				var fileFilter : FileFilter = new FileFilter("XML", "*.xml");
+				
+				var filePath : String = appPath || null;
+				
+				try
+				{
+					var file : File = new File(filePath);
+					
+					file.addEventListener(Event.SELECT, appSelectHandler);
+					
+					file.browseForOpen("Select application", [fileFilter]);
+				}
+				catch (e:Error)
+				{
+					file = new File();
+					
+					if (!file.hasEventListener(Event.SELECT))
+						file.addEventListener(Event.SELECT, appSelectHandler);
+					
+					file.browseForOpen("Select application", [fileFilter]);
+					
+				}
+				
+				function appSelectHandler (evt:Event) : void
+				{
+					file.removeEventListener(Event.SELECT, appSelectHandler);
+					
+					if (isSselectedAppCorrect())
+						installerApplication.text = file.nativePath;
+					else
+						installerApplication.text = DEFAULT_APP_PATH;
+				}
+				
+				function isSselectedAppCorrect() : Boolean
+				{
+					var fileStream : FileStream = new FileStream();
+					var appXml : XML;
+					
+					try 
+					{
+						fileStream.open(file, FileMode.READ);
+						appXml = new XML( fileStream.readUTFBytes( fileStream.bytesAvailable ) );
+						fileStream.close();
+						
+						var appId : String = appXml.Information.ID[0];
+						
+						if (!appId)
+							return false;
+					}
+					catch (e:Error)
+					{
+						fileStream.close();
+						return false;
+					}
+					
+					return true;
+				}
+				
 			}
 			
 			public function get currentTemplate() : Template
@@ -187,9 +276,10 @@
 			
 			private function compilePlayer():void
 			{
-				var installerAppXmlPrepeared : Boolean = prepareInstallerXml();
+				var installerPropertiesXmlPrepeared : Boolean = prepareInstallerPropertiesXml();
+				var installerAppPrepeared : Boolean = prepareInstallerApp();
 				
-				if (!installerAppXmlPrepeared)
+				if (!installerPropertiesXmlPrepeared)
 				{
 					SuperAlert.show("Can't prepare installer properties xml", "Error");
 					return;
@@ -207,7 +297,7 @@
 				ProgressManager.source = null;
 				ProgressManager.start( ProgressManager.DIALOG_MODE, false );
 				
-				sdkCompiler.buildInstallerPackage(StringUtil.trim(installerFolder.text), StringUtil.trim(installerFileName.text));
+				sdkCompiler.buildInstallerPackage (outputFolderPath, outputFileName, installerAppPrepeared);
 				
 				function sdkCompilerEventHandler (evt:SDKCompilerEvent) : void
 				{
@@ -223,7 +313,32 @@
 				}
 			}
 			
-			private function prepareInstallerXml() : Boolean
+			private function prepareInstallerApp() : Boolean
+			{
+				if (!appPath)
+					return false;
+				
+				try
+				{
+					var sourceAppFile : File = new File(appPath);
+					
+					if (!sourceAppFile || !sourceAppFile.exists)
+						return false;
+					
+					var targetAppFile : File = File.applicationStorageDirectory.resolvePath("app.xml");
+					
+					sourceAppFile.copyTo(targetAppFile, true);
+				}
+				catch (e:Error)
+				{
+					return false;
+				}
+				
+				return true;
+				
+			}
+			
+			private function prepareInstallerPropertiesXml() : Boolean
 			{
 				var fileStream : FileStream = new FileStream();
 				
@@ -264,20 +379,31 @@
 		]]>
 	</mx:Script>
 	
-	<!--> TODO: VBox not in use ... </-->
 	<mx:VBox verticalGap="10"
 			 paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20">
-		<mx:Label text="AIR" styleName="headerLabel" />
+		<mx:VBox width="450" horizontalGap="3">
+			<mx:Label text="Build installer" styleName="headerLabel" />
+			<mx:Label text="Build and export VDOM Application Installer" />
+			<mx:HRule width="100%" />
+			<mx:Spacer height="20"/>
+		</mx:VBox>
 			 
-		<mx:HBox width="400" horizontalGap="3">
-			<mx:Label text="Output installer folder: " width="160"/>
+		<mx:HBox width="450" horizontalGap="3">
+			<mx:Label text="Output folder: " width="110"/>
 			<mx:TextInput id="installerFolder" width="100%" editable="false" toolTip="{installerFolder.text}"/>
-			<mx:Button label="Browse" click="btnOutputFolderClickHandler(event)"/>
+			<mx:Button label="Browse" click="btnOutputFolderClickHandler(event)" width="70"/>
 		</mx:HBox>
 		
-		<mx:HBox width="400" horizontalGap="3">
-			<mx:Label text="Output installer file name: " width="160"/>
+		<mx:HBox width="450" horizontalGap="3">
+			<mx:Label text="Output file name: " width="110"/>
 			<mx:TextInput id="installerFileName" width="100%" restrict="a-zA-z0-9 \-_.()" toolTip="{installerFileName.text}"/>
+			<mx:Spacer width="70"/>
+		</mx:HBox>
+		
+		<mx:HBox width="450" horizontalGap="3">
+			<mx:Label text="Application: " width="110"/>
+			<mx:TextInput id="installerApplication" width="100%" editable="true" toolTip="{installerApplication.text}"/>
+			<mx:Button label="Browse" click="btnBrowseApplicationClickHandler(event)" width="70"/>
 		</mx:HBox>
 			 
 		<mx:Button label="Build" click="btnBuildClickHandler(event)" />
