--- a/PowerPack/v.01/PowerPack/src/Installer.mxml
+++ b/PowerPack/v.01/PowerPack/src/Installer.mxml
@@ -2,21 +2,21 @@
 <mx:WindowedApplication
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:customize="net.vdombox.powerpack.customize.*"
-	width="750" height="400" verticalAlign="middle" horizontalAlign="center" layout="absolute"
-	showStatusBar="false" showGripper="false"
-	title="{LanguageManager.sentences.app_title}"
-	titleIcon="@Embed(source='assets/icons/icon_16.png')"
-	titleBarFactory="net.vdombox.powerpack.customize.core.windowClasses.GeneratorTitleBar"
-	statusBarFactory="net.vdombox.powerpack.customize.core.windowClasses.SuperStatusBar"
+	width="760" height="410" verticalAlign="middle" horizontalAlign="center" layout="absolute"
+	showStatusBar="false" showGripper="false" showTitleBar="false"
+	
+	
+
 	initialize="init()"
 	applicationComplete="show()"
 	updateComplete="complete()"
 	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*"
 	creationComplete="windowedapplication1_creationCompleteHandler(event)"
-	backgroundImage="assets/images/texture_ide_sidebar.png"
+
 	
+	horizontalScrollPolicy="off"
+	verticalScrollPolicy="off"
 	xmlns:control="net.vdombox.powerpack.control.*"
-	showTitleBar="false"
 	mouseDown="window_mouseDownHandler(event)">
 	
 	<mx:Style source="assets/style/installer.css" />
@@ -29,6 +29,7 @@
 		<mx:Move xBy="20" xTo="{tplPic.x}" duration="400" />
 		<mx:Fade alphaFrom="0" alphaTo="1" duration="400" />
 	</mx:Parallel>
+	
 	
 	<customize:GeneratorResources id="resources" />
 	
@@ -60,6 +61,7 @@
 			
 			import mx.controls.Alert;
 			import mx.controls.ProgressBarMode;
+			import mx.core.Application;
 			import mx.core.FlexLoader;
 			import mx.events.CloseEvent;
 			import mx.events.EffectEvent;
@@ -170,6 +172,8 @@
 			
 			private function complete() : void
 			{
+			
+			
 			}
 			
 			private function exitApplication( event : Event = null ) : void
@@ -198,7 +202,7 @@
 				fileStream.close();
 				
 				LanguageManager.languageXML = xml;
-				
+				SuperAlert
 				ContextManager.instance.lang.label = LanguageManager.languageXML.@label.toLowerCase();
 				ContextManager.instance.lang.file = LanguageManager.languageXML.@data;
 			}
@@ -352,8 +356,7 @@
 					{
 						child = vsProcess.getChildAt( event.newIndex );
 					}
-					else if ( event.target == vsImages )
-						child = vsImages.getChildAt( event.newIndex );
+					
 					
 					if ( child )
 						child.addEventListener( EffectEvent.EFFECT_END, onEffectEnd );
@@ -366,96 +369,32 @@
 			{
 				event.target.removeEventListener( EffectEvent.EFFECT_END, onEffectEnd );
 				
-				switch ( vsProcess.selectedChild )
-				{
-					case cProcess:
-						switch ( vsImages.selectedIndex )
-						{
-							case 0:
-								runingTemplate();
-								break;
-						
-						}
-						break;
-					
-					
-					case cComplete:
-						txtResultBuf.text = '';
-						//txtResultBuf.text = ContextManager.templateStruct.buffer;
-						txtResultBuf.text = (timer / 1000).toString();
-						txtResultBuf.verticalScrollPosition = 0;
-						break;
-				}
 			}
 			
 			private function processStep( step : * ) : void
 			{
-				switch ( typeof step )
+				
+				switch ( step )
 				{
-					case 'number':
-						switch ( step )
-						{
-							case 1:
-								vsProcess.selectedChild = cProcess;
-								vsLastChanged = vsImages.selectedIndex == 0 ? vsProcess : vsImages;
-								vsImages.selectedIndex = 0;
-//								progressBar.mode = ProgressBarMode.MANUAL;
-//								progressBar.setProgress( 0, 100 );
-//								LanguageManager.bindSentence( 'prgrs_gen_tpl', progressBar );
-								break;
-							case 2:
-								vsProcess.selectedChild = cProcess;
-								vsLastChanged = vsImages.selectedIndex == 1 ? vsProcess : vsImages;
-								vsImages.selectedIndex = 1;
-//								progressBar.mode = ProgressBarMode.MANUAL;
-//								progressBar.setProgress( 0, 100 );
-//								LanguageManager.bindSentence( 'prgrs_save_to_server_tpl', progressBar );
-								break
-							case 3:
-								vsProcess.selectedChild = cProcess;
-								vsLastChanged = vsImages.selectedIndex == 2 ? vsProcess : vsImages;
-								vsImages.selectedIndex = 2;
-//								progressBar.mode = ProgressBarMode.MANUAL;
-//								progressBar.setProgress( 0, 100 );
-//								LanguageManager.bindSentence( 'prgrs_save_to_file_tpl', progressBar );
-								break;
-							case 4:
-								vsProcess.selectedChild = cProcess;
-								vsLastChanged = vsImages.selectedIndex == 3 ? vsProcess : vsImages;
-								vsImages.selectedIndex = 3;
-								vsLastChanged = vsImages;
-								progressBar.mode = ProgressBarMode.MANUAL;
-//								progressBar.setProgress( 0, 100 );
-//								LanguageManager.bindSentence( 'prgrs_launch_app', progressBar );
-								break;
-						}
+					case cKeyRequest:
+						vsProcess.selectedChild = cKeyRequest;
 						break;
-					default:
-						switch ( step )
-						{
-							case cKeyRequest:
-								vsProcess.selectedChild = cKeyRequest;
-								break;
-							case cGeneral:
-								vsProcess.selectedChild = cGeneral;
-								break;
-							
-							case cProcess:
-								vsProcess.selectedChild = cProcess;
-								break;
-							
-							case cComplete:
-								vsProcess.selectedChild = cComplete;
-								break;
-							case cFinal:
-								vsProcess.selectedChild = cFinal;
-								break;
-						}
+					case cGeneral:
+						vsProcess.selectedChild = cGeneral;
+						btnRun.setFocus();
+						
+						break;
+					
+					case cProcess:
+						vsProcess.selectedChild = cProcess;
+						break;
+					
+					case cFinal:
+						vsProcess.selectedChild = cFinal;
 						break;
 				}
 			}
 			
-			////////////////////////////////////////////////////////////
 			
 			private function clearTemplateDebug() : void
 			{
@@ -472,6 +411,8 @@
 			
 			private function runingTemplate() : void
 			{
+				vsProcess.selectedChild = cProcess;
+				
 				try
 				{
 //					mnMain.enabled = false;
@@ -529,12 +470,6 @@
 				var templateStructure : TemplateStruct = ContextManager.templateStruct;
 				try
 				{
-//					progressBar.mode = ProgressBarMode.MANUAL;
-//					progressBar.maximum = templateStructure.nodes.length + 1;
-					
-					//tpl.isDebug = true;
-					//tpl.isStepDebug = true;
-					
 					templateStructure.addEventListener( "error", debugErrorHandler, false, 0, true);
 //					templateStructure.addEventListener( "stepComplete", stepCompleteHandler, false, 0, true );
 					templateStructure.addEventListener( "generationComplete", generationComplete );
@@ -576,14 +511,7 @@
 				ContextManager.templateStruct.removeEventListener( "generationComplete", generationComplete );
 				ContextManager.templateStruct.removeEventListener( "error", debugErrorHandler );
 				
-				if ( ContextManager.templateStruct.buffer )
-				{
-					processStep( cFinal );
-				}
-				else
-				{
-					processStep( cComplete );
-				}
+				processStep( cFinal );
 			}
 			
 			
@@ -680,6 +608,16 @@
 			protected function windowedapplication1_creationCompleteHandler(event:FlexEvent):void
 			{
 				openTemplateFile(null,onTemplateLoad);
+				
+				var window : Object = Application.application
+				var screen : Screen = Screen.getScreensForRectangle( nativeWindow.bounds )[ 0 ];
+				
+				window.move( Math.max(screen.bounds.width / 2 - window.width / 2, 0 ), Math.max( screen.bounds.height / 2.5 - window.height / 2, 0 ));
+				
+				// Temp
+				progressBar.setProgress( 30 , 100 );
+				progressBar.label =  "Progress is 30%";
+				
 			}
 			
 			protected function window_mouseDownHandler(event:MouseEvent):void
@@ -691,10 +629,20 @@
 				}
 			}
 			
+			protected function txtKey_keyDownHandler(event:KeyboardEvent):void
+			{
+				// TODO Auto-generated method stub
+				if (event.keyCode == Keyboard.ENTER)
+					openTemplate( txtKey.text );
+					
+			}
+			
 		]]>
 	</mx:Script>
-
-	<mx:HBox height="10" width="100%"
+	<mx:Image source="assets/images/Background.png" width="760" height="410"/>
+	
+	<mx:HBox  right="14" y="17" 
+			  height="10" width="100%"
 			 verticalAlign="bottom" horizontalAlign="right"
 			 horizontalGap="20">
 		
@@ -713,176 +661,109 @@
 		
 		<mx:Spacer width="10"/>
 	</mx:HBox>
-		
-	<mx:VBox height="100%" width="100%">
-		
-		<!--mx:MenuBar id="mnMain" width="100%" dataProvider="{fileMenuData.menuitem}" labelFunction="labelFunction"
-					showRoot="false"
-					itemClick="onMenuClick(event);"></mx:MenuBar-->
-		
-		<mx:HBox width="100%" height="100%" verticalAlign="top" horizontalAlign="left"
-				 paddingTop="26" paddingRight="10" paddingLeft="40" paddingBottom="10" verticalGap="0">
-			<controls:Base64Image id="tplPic"  x="14"
-								  width="220" height="100%"
-								  value="{resources.strLogo}"  
-								  showEffect="{picShow}"
-								  scaleContent="true" maintainAspectRatio="true"
-								  verticalAlign="top" horizontalAlign="right"/>
-			<mx:VBox height="100%" width="100%" horizontalAlign="right" >
-				
-				<mx:ViewStack id="vsProcess" width="100%" height="100%" creationPolicy="all" change="vsChange(event)" paddingTop="0">
-					
-					
-					<mx:VBox id="cKeyRequest" height="100%" width="100%"
-							 verticalAlign="top" horizontalAlign="left"
-							 showEffect="{canvasShow}" hideEffect="{canvasHide}" verticalGap="0">
-			
-						<mx:Label width="90%" 
-									  text="{ContextManager.templates.getItemAt(0).name}"
-									  styleName="headerLabel"/>
-						<!--<mx:Label  width="90%" height="100%"
-									 text="{ContextManager.templates.getItemAt(0).description}" 
-									 styleName="infoTextStyle"/>-->
-						<mx:TextArea width="450" height="100"
-									 text="{ContextManager.templates.getItemAt(0).description}" 
-									 styleName="infoTextStyle"
-									 editable="false" selectable="false" focusEnabled="false"
-									 backgroundAlpha="0" borderStyle="none"/>
+
+	<controls:Base64Image id="tplPic"  x="42" y="45"
+						  width="220" height="100%"
 						
-						<mx:Spacer height="5"/>
-						<mx:Label text="{LanguageManager.sentences.msg_input_template_key}:" />
-						<mx:TextInput width="90%" id="txtKey" styleName="edtTextStyle" />
-						
-						<mx:ControlBar width="90%" horizontalAlign="right">
-							
-							<control:PowerPackInstallerButton id="btnAcceptKey" label="{LanguageManager.sentences.accept}"
-									   click="onKeyAccept(event)"/>
-						</mx:ControlBar>
-					</mx:VBox>
-					
-					<mx:VBox id="cGeneral" height="100%" width="100%"
-							 verticalAlign="top" horizontalAlign="left"
-							 showEffect="{canvasShow}" hideEffect="{canvasHide}">
-						<mx:Label width="90%" 
-									  text="{ContextManager.templates.getItemAt(0).name}"
-									  styleName="headerLabel" />
-						<!--<mx:Label  width="450" height="100%" 
-									 text="{ContextManager.templates.getItemAt(0).description}"
-									 styleName="infoTextStyle"/>-->
-						<mx:TextArea width="450" height="150"
-									 text="{ContextManager.templates.getItemAt(0).description}" 
-									 styleName="infoTextStyle"
-									 editable="false" selectable="false" focusEnabled="false"
-									 backgroundAlpha="0" borderStyle="none"/>
-						
-						<mx:ControlBar width="90%" horizontalAlign="right">
-							
-							<control:PowerPackInstallerButton id="btnRun" 
-															  label="{LanguageManager.sentences.run}"
-									   						  click="processStep(1)"/>
-						</mx:ControlBar>
-					</mx:VBox>
-					
-					
-					
-					
-					<mx:VBox id="cProcess" height="100%" width="100%"
-							 verticalAlign="top" horizontalAlign="center"
-							 showEffect="{canvasShow}" hideEffect="{canvasHide}">
-						<mx:Label width="90%" 
-									  text="{ContextManager.templates.getItemAt(0).name}"
-									  styleName="headerLabel"/>
-						
-						<mx:ViewStack id="vsImages" 
-									  change="vsChange(event)">
-							<mx:HBox width="100%" horizontalAlign="center" verticalAlign="bottom" horizontalGap="0"
-									 showEffect="canvasShow" hideEffect="canvasHide">
-								
-							</mx:HBox>
-							
-							<mx:HBox width="100%" horizontalAlign="center" verticalAlign="bottom" horizontalGap="0"
-									 showEffect="canvasShow" hideEffect="canvasHide">
-								
-							</mx:HBox>
-							
-							<mx:HBox width="100%" horizontalAlign="center" verticalAlign="bottom" horizontalGap="0">
-							
-							</mx:HBox>
-							
-							
-							<mx:HBox width="100%" horizontalAlign="center" verticalAlign="bottom" horizontalGap="0"
-									 showEffect="canvasShow" hideEffect="canvasHide">
-								
-							</mx:HBox>
-						</mx:ViewStack>
-						<mx:Spacer width="100%" height="100%" />
-						
-						
-						<mx:ProgressBar width="90%" minimum="0" maximum="100" id="progressBar" mode="manual" />
-							
-						<mx:ControlBar horizontalAlign="right" width="90%">
-							
-							<control:PowerPackInstallerButton id="btnCancel" label="{LanguageManager.sentences.cancel}"
-									   click="alertInterrupt()" />
-						</mx:ControlBar>
-					
-						
-						
-					</mx:VBox>
-					
-					<mx:VBox id="cComplete" height="100%" width="100%"
-							 verticalAlign="top" horizontalAlign="left"
-							 showEffect="{canvasShow}" hideEffect="{canvasHide}">
-						<mx:Label text="{LanguageManager.sentences.gen_result}:" />
-						<mx:TextArea id="txtResultBuf" editable="false" width="90%" height="250"
-									 text="" />
-						<mx:ControlBar width="90%" horizontalAlign="right">
-							<control:PowerPackInstallerButton id="btnNext" label="{LanguageManager.sentences.next}"
-									   click="processStep(cFinal)" />
-						</mx:ControlBar>
-					</mx:VBox>
-					
-					<mx:VBox id="cFinal" height="100%" width="100%"
-							 verticalAlign="top" horizontalAlign="left"
-							 showEffect="{canvasShow}" hideEffect="{canvasHide}">
-						<mx:Label width="90%" 
-								  text="{ContextManager.templates.getItemAt(0).name}"
-								  styleName="headerLabel"/>
-						
-						<mx:Text styleName="infoTextStyle" width="90%"
-								 text="{LanguageManager.sentences.msg_gen_finish}">
-						</mx:Text>
-						<mx:Spacer height="100%" />
-						<mx:ControlBar width="90%" horizontalAlign="right">
-							<control:PowerPackInstallerButton id="btnExit"
-									   label="{LanguageManager.sentences.exit}"
-									   click="exitApplication();" />
-						</mx:ControlBar>
-					</mx:VBox>
-					
-				</mx:ViewStack>
-				
-			</mx:VBox>
-		</mx:HBox>
-		
-		<mx:HBox id="bottomPanel" bottom="0" 
-				 width="100%" height="40" 
-				 backgroundColor="#464646" 
-				 verticalAlign="middle">
-			
-			<mx:Spacer width="5"/>
-			<mx:Image source="@Embed(source='assets/images/powerpack_sign.png')" 
-					  smoothBitmapContent="true"
-					  verticalAlign="middle"/>
-			
-			<mx:Spacer width="100%"/>
-			<mx:Image source="@Embed(source='assets/images/txt_logo.png')" 
-					  width="160" height="20" 
-					  smoothBitmapContent="true"
-					  verticalAlign="middle"/>
-			<mx:Spacer width="5"/>
-		</mx:HBox>
-	</mx:VBox>
+						  showEffect="{picShow}"
+						  scaleContent="true" maintainAspectRatio="true"
+						  verticalAlign="top" horizontalAlign="right"/>
 	
+	<mx:VBox x="300" y="33" >
 		
+	
+	<mx:Label maxWidth="450"
+		width="100%"
+		text="{ContextManager.templates.getItemAt(0).name}"
+		styleName="headerLabel"/>
+	
+			
+				
+		<mx:ViewStack id="vsProcess"
+					  width="100%" height="100%" 
+					  creationPolicy="all" change="vsChange(event)" paddingTop="0">
+			
+			
+			<mx:Canvas id="cKeyRequest"
+					width="100%" 
+					 showEffect="{canvasShow}" hideEffect="{canvasHide}" >
+	
+				
+				
+				<mx:TextArea 
+							 maxWidth="380"
+							 text="{ContextManager.templates.getItemAt(0).description}" 
+							 styleName="infoTextStyle"
+							 editable="false" selectable="false" focusEnabled="false" 
+							
+							 backgroundAlpha="0" borderStyle="none" />
+				
+				
+				<mx:Label y="70"
+						  text="{LanguageManager.sentences.msg_input_template_key}:" />
+				<mx:TextInput y="95" width="385" height="40" id="txtKey"  styleName="keyEdtTextStyle" 
+							  paddingTop="10"  textIndent="10" creationComplete="{txtKey.setFocus()}"
+							  keyDown="txtKey_keyDownHandler(event)"/>
+				
+				
+				<control:PowerPackInstallerButton id="btnAcceptKey" 
+												  y="162" x="303" label="{LanguageManager.sentences.accept}"
+							   click="onKeyAccept(event)"/>
+				
+			</mx:Canvas>
+			<mx:Canvas id="cGeneral"
+					   width="100%" 
+					   showEffect="{canvasShow}" hideEffect="{canvasHide}" >
+				
+				
+				
+				<mx:TextArea 
+					maxWidth="380"
+					text="{ContextManager.templates.getItemAt(0).description}" 
+					styleName="infoTextStyle"
+					editable="false" selectable="false" focusEnabled="false" 
+					
+					backgroundAlpha="0" borderStyle="none" />
+				
+				<control:PowerPackInstallerButton id="btnRun" 
+												  y="162" x="303" 
+												  label="{LanguageManager.sentences.run}"
+												  click="runingTemplate();"
+												 />
+				
+			</mx:Canvas>
+			
+			<mx:Canvas id="cProcess" 
+					   height="100%" width="100%"
+					 	showEffect="{canvasShow}" hideEffect="{canvasHide}">
+
+				<mx:ProgressBar id="progressBar" 
+								y="110" width="385" 
+								minimum="0" maximum="100" 
+								mode="manual"
+								styleName="infoTextStyle"/>
+					
+					<control:PowerPackInstallerButton id="btnCancel"
+														y="162" x="303" 
+													 label="{LanguageManager.sentences.cancel}"
+												   	click="alertInterrupt()" />
+			</mx:Canvas>
+			
+			
+			
+			<mx:Canvas id="cFinal" height="100%" width="100%"
+					 showEffect="{canvasShow}" hideEffect="{canvasHide}">
+			
+				
+				<mx:Text styleName="infoTextStyle" 
+						 text="{LanguageManager.sentences.msg_gen_finish}"/>
+				
+				<control:PowerPackInstallerButton id="btnExit"
+												  y="162" x="303" 				  
+							   label="{LanguageManager.sentences.exit}"
+							   click="exitApplication();" />
+			</mx:Canvas>
+			
+		</mx:ViewStack>
+	</mx:VBox>
 </mx:WindowedApplication>
