--- a/PowerPack/v.01/PowerPack/src/assets/style/installer.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/installer.css
@@ -43,7 +43,7 @@ WindowedApplication
 {
     headerHeight             : 30;
 	
-    cornerRadius             : 9;
+    
 	
     titleTextStyleName       : "titleTextStyle";
     
@@ -53,10 +53,13 @@ WindowedApplication
     titleBarBackgroundSkin   : ClassReference("net.vdombox.powerpack.customize.skins.GeneratorApplicationTitleBarBackgroundSkin");
 	
     borderColor              : #424242;
-    borderThickness          : 8;
+    borderThickness          : 0;
+	borderAlpha              : 0.0;				
     
     buttonPadding            : 2;
     buttonAlignment          : "auto";
+	
+	backgroundAlpha			 :"0.0";
 	
 	minimizeButtonSkin		 : ClassReference("net.vdombox.powerpack.customize.skins.MinimizeButtonSkin");
 	maximizeButtonSkin		 : ClassReference("net.vdombox.powerpack.customize.skins.MaximizeButtonSkin");
@@ -92,9 +95,12 @@ ProgressBar
 {
     trackColors : #353535, #353535;
     trackHeight : 12;
-    barColor    : #4f92c4;
-    barSkin     : ClassReference("net.vdombox.powerpack.customize.skins.GeneratorProgressBarSkin");
+    barColor    : #0c5d9b;
+	borderColor : #787878;
+	borderSkin  :  ClassReference("net.vdombox.powerpack.customize.skins.GeneratorProgressBarSkin");
+   /* barSkin     : ClassReference("net.vdombox.powerpack.customize.skins.GeneratorProgressBarSkin");*/
 	color		: #ffffff;
+	
 }
 
 
@@ -122,7 +128,7 @@ GridItem
     textIndent : 15;
 }
 
-.edtTextStyle
+.keyEdtTextStyle
 {
     fontFamily      : Arial;
     fontSize        : 14;
@@ -132,6 +138,7 @@ GridItem
     borderStyle     : solid;
     borderColor     : #5A5859;
     borderThickness : 2;
+	cornerRadius 	: 10;
 }
 
 .infoTextStyle
@@ -139,6 +146,7 @@ GridItem
     fontFamily : Arial;
     fontSize   : 14;
 	color	   : #ffffff;
+	
 }
 
 .dlgHeader
