--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
@@ -281,16 +281,18 @@
 			 horizontalAlign="center">
 		<mx:Canvas width="100%" height="100%" label="{LanguageManager.sentences.question}">
 			<mx:HBox verticalAlign="top" left="10" top="10" bottom="10" right="10">
-				<mx:Image source="@Embed('/assets/images/Question.png')" />
+				<mx:Image source="@Embed('/assets/images/question.png')" />
 				<mx:Text width="100%" height="100%" id="txtQuestion" />
 			</mx:HBox>
 		</mx:Canvas>
 		<mx:HRule width="95%" />
 		<mx:Canvas width="100%" height="100%" label="{LanguageManager.sentences.answer}">
 			<mx:HBox left="10" right="10" top="10" bottom="10">
-				<mx:Image source="@Embed('/assets/images/User.png')" autoLoad="true" />
+				<mx:Image source="@Embed('/assets/images/user.png')" autoLoad="true" />
 				<mx:Canvas width="100%" height="100%" id="cnvsAnswer">
-					<mx:RadioButtonGroup id="radioGroup" />
+					<mx:RadioButtonGroup id="radioGroup" >
+					</mx:RadioButtonGroup>
+					<mx:RadioButton />
 				</mx:Canvas>
 				<mx:Canvas height="100%">
 					<mx:Button label="Ok" bottom="0" id="btnOk" width="100%" />
