--- a/PowerPack/v.01/PowerPack/src/Installer.mxml
+++ b/PowerPack/v.01/PowerPack/src/Installer.mxml
@@ -73,7 +73,7 @@
 			import net.vdombox.powerpack.BasicError;
 			import net.vdombox.powerpack.Template;
 			import net.vdombox.powerpack.customize.skins.CloseButtonSkin;
-			import net.vdombox.powerpack.customize.skins.GradientButtonSkin;
+			import net.vdombox.powerpack.customize.skins.RoundButtonSkin;
 			import net.vdombox.powerpack.customize.skins.MaximizeButtonSkin;
 			import net.vdombox.powerpack.customize.skins.MinimizeButtonSkin;
 			import net.vdombox.powerpack.dialog.GenConnection;
