fixed error on question
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7638 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/assets/style/installer.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/installer.css
@@ -197,6 +197,8 @@ GridItem
 	borderColor     : #cccccc;
 	borderThickness : 2;
 	cornerRadius 	: 6;
+	paddingLeft		: 8;
+	focusRoundedCorners: tr tb;
 }
 
 .infoTextStyle
