--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/popup/Question.mxml
@@ -74,6 +74,7 @@
 		
 		<mx:Canvas width="100%" id="topPart">
 			<mx:HBox width="100%"
+					 paddingLeft="23" paddingTop="12" paddingRight="23" paddingBottom="12"
 					 horizontalGap="10" id="topH">
 				<mx:Image source="@Embed('/assets/images/question.png')" autoLoad="true" id="qImg"/>
 				<mx:Text width="100%" maxHeight="200"
@@ -86,7 +87,8 @@
 		</mx:Canvas>
 		
 		<popup:PopupBottomPart width="100%" id="bottomPart">
-			<mx:VBox  verticalGap="12" id="t1" width="100%">
+			<mx:VBox  verticalGap="12" id="t1" width="100%"
+					  paddingLeft="23" paddingTop="12" paddingRight="23" paddingBottom="12">
 				<mx:HBox width="100%" height="100%" id="t2">
  					<mx:Image source="@Embed('/assets/images/user.png')" autoLoad="true" id="t3"/>
 					<mx:Canvas width="100%"  id="answerCanvas"  maxHeight="240" />
