--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -4,15 +4,18 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300"
 		 implements="net.vdombox.ide.modules.dataBase.interfaces.IEditor" 
 		 xmlns:components="net.vdombox.ide.modules.dataBase.view.components.*"
-		 removedFromStage="group1_removedFromStageHandler(event)">
+		 removedFromStage="group1_removedFromStageHandler(event)" xmlns:components1="net.vdombox.ide.common.components.*">
 	
 	<s:states>
 		<s:State name="tableEditor"/>
 		<s:State name="tableStructure"/>
-		<s:State name="basaQuery"/>
+		<s:State name="baseQuery"/>
+		<s:State name="baseVisual"/>
 	</s:states>
 	<fx:Script>
 		<![CDATA[
+			import flash.desktop.NativeApplication;
+			
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.events.EditorEvent;
@@ -45,7 +48,7 @@
 			{
 				_objectVO = value;
 				if ( _objectVO as PageVO )
-					currentState = "basaQuery";
+					currentState = "baseVisual";
 				else
 					currentState = "tableEditor";
 				/*if ( dataEditor )
@@ -73,6 +76,32 @@
 			}
 			
 			
+			protected function visual_clickHandler(event:MouseEvent):void
+			{
+				currentState = "baseVisual";
+			}
+			
+			protected function query_clickHandler(event:MouseEvent):void
+			{
+				currentState = "baseQuery";
+			}
+			
+			protected function newBase_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new DataTablesEvents( DataTablesEvents.NEW_BASE ));
+			}
+			
+			protected function newTable_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new DataTablesEvents( DataTablesEvents.NEW_TABLE ));
+			}
+			
+			protected function goToBase_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new DataTablesEvents( DataTablesEvents.GO_TO_BASE ));
+			}
+			
+			
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -86,11 +115,23 @@
 	</s:Rect>
 	
 	<s:VGroup paddingTop="5" width="100%" height="100%" gap="5">
-		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="right" paddingRight="15" includeIn="tableEditor,tableStructure">
+		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="left" paddingLeft="10" paddingRight="10" >
 			
-			<s:Button id="data" label="{ resourceManager.getString( 'DataBase_General', 'data_table_data' ) }" click="data_clickHandler(event)" />
+			<components1:WorkAreaButton id="data" label="{ resourceManager.getString( 'DataBase_General', 'data_table_data' ) }" height="20" click="data_clickHandler(event)" includeIn="tableEditor,tableStructure"/>
 			
-			<s:Button id="structure" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure' ) }" click="structure_clickHandler(event)"/>
+			<components1:WorkAreaButton id="structure" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure' ) }" height="20" click="structure_clickHandler(event)" includeIn="tableEditor,tableStructure"/>
+			
+			<components1:WorkAreaButton id="visual" label="{ resourceManager.getString( 'DataBase_General', 'data_table_visual' ) }" height="20" click="visual_clickHandler(event)" includeIn="baseQuery,baseVisual"/>
+			
+			<components1:WorkAreaButton id="query" label="{ resourceManager.getString( 'DataBase_General', 'data_table_sql_query' ) }" height="20" click="query_clickHandler(event)" includeIn="baseQuery,baseVisual"/>
+			
+			<mx:Spacer width="100%"/>
+			
+			<components1:WorkAreaButton id="newTable" label="{ resourceManager.getString( 'DataBase_General', 'data_table_new_table' ) }" height="20" click="newTable_clickHandler(event)" includeIn="baseVisual"/>
+			
+			<!--<components1:WorkAreaButton id="newBase" label="{ resourceManager.getString( 'DataBase_General', 'data_table_new_base' ) }" height="20" click="newBase_clickHandler(event)" includeIn="baseVisual"/>-->
+			
+			<components1:WorkAreaButton id="goToBase" label="{ resourceManager.getString( 'DataBase_General', 'data_table_go_to_base' ) }" height="20" click="goToBase_clickHandler(event)" includeIn="tableEditor,tableStructure"/>
 			
 		</s:HGroup>
 		
@@ -100,7 +141,9 @@
 			
 			<components:DataTableStructure id="DataStructure" width="100%" height="100%" objectVO="{_objectVO as ObjectVO}" visible="false" visible.tableStructure="true"/>
 			
-			<components:DataTableQuery id="baseQuery" width="100%" height="100%" objectVO="{ _objectVO as PageVO }" visible="false" visible.basaQuery="true" />
+			<components:DataTableQuery id="baseQuery" width="100%" height="100%" objectVO="{ _objectVO as PageVO }" visible="false" visible.baseQuery="true" />
+			
+			<components:BaseVisualEditor id="baseVisual" width="100%" height="100%" objectVO="{ _objectVO as PageVO }" visible="false" visible.baseVisual="true" />
 			
 		</s:Group>
 		
